bpo-43410: Fix crash in the parser when producing syntax errors when reading from stdin